Gregor Wagner <anygregor@gmail.com> Bug 533450: js_GetStringBytes ignore js_CStringsAreUTF8 when JSString::isUnitString r=brendan